fixed viewport issue on mobile

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -40,7 +40,7 @@
             margin: 1rem;
         }
 
-        &__techStack {
+        &__links {
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
